--- a/index.html
+++ b/index.html
@@ -11,6 +11,44 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 </head>
 <body>
+
+	<!-- ======= Header Section/Seção de cabeçalho ======= -->
+	<header class="header">
+		<a href="index.html"> LOGO </a>
+		<nav class="navbar">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="products.html">Produtos</a></li>
+				<li><a href="#">Páginas +</a>
+					<ul>
+						<li><a href="about.html">Sobre Nós</a></li>
+						<li><a href="blogs.html">Blogs</a></li>
+					</ul>
+				</li>
+				<li><a href="contact.html">Contato</a></li>
+				<li><a href="#">Conta +</a>
+					<ul>
+						<li><a href="login.html">Login</a></li>
+						<li><a href="register.html">Registro</a></li>
+					</ul>
+				</li>
+			</ul>
+		</nav>
+		<div class="icons">
+			<div class="fas fa-bars" id="menu-btn"></div>
+			<div class="fas fa-search" id="search-btn"></div>
+			<a href="cart.html" class="fas fa-shopping-cart"></a>
+		</div>
+	</header>
+
+
+
+
+
+
+
+
+
 	
 	<script src="js/script.js"></script>
 </body>
