--- a/register.html
+++ b/register.html
@@ -11,6 +11,16 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 </head>
 <body>
+
+	<!-- ======= Header Section/Seção de cabeçalho ======= -->
+
+
+
+
+
+
+
+	
 	
 	<script src="js/script.js"></script>
 </body>
