--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<!-- ======= Header Section/Seção de cabeçalho ======= -->
 	<header class="header">
-		<a href="index.html"> LOGO </a>
+		<a href="index.html" class="logo"> LOGO </a>
 		<nav class="navbar">
 			<ul>
 				<li><a href="index.html">Home</a></li>
