--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 			<div class="fas fa-search" id="search-btn"></div>
 			<a href="cart.html" class="fas fa-shopping-cart"></a>
 		</div>
+		<!--Search form -->
+		<form action="" class="search-form">
+			<input type="search" name="" placeholder="Pesquise aqui..." id="search-box">
+			<label for="search-box" class="fas fa-search"></label>
+		</form>
 	</header>
 
 
