--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 		</ul>
 	</nav>
 	<div class="icons">
-		<div class="fas fa-bars" id="menu-btn"></div>
-		<div class="fas fa-search" id="search-btn"></div>
+		<div id="menu-btn" class="fas fa-bars"></div>
+		<div id="search-btn" class="fas fa-search"></div>
 		<a href="cart.html" class="fas fa-shopping-cart"></a>
 	</div>
 <!--Search form -->
