--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Home</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/favicon.ico"/>
-	<!-- font awesoe cdn link -->
+	<!-- font awesome cdn link -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 </head>
 <body>
@@ -48,8 +48,24 @@
 
 
 
-
-
+<!-- ======= Footer Section/Seção de rodapé ======= -->
+<section class="footer">
+	<div class="box-container">
+		<div class="box">
+			<div class="box">
+				<h3>Links Rápidos</h3>
+				<a href="home.html"><i class="fas fa-angle-right"></i> Home</a>
+				<a href="products.html"><i class="fas fa-angle-right"></i> Produtos</a>
+				<a href="about.html"><i class="fas fa-angle-right"></i> Sobre Nós</a>
+				<a href="blogs.html"><i class="fas fa-angle-right"></i> Blogs</a>
+				<a href="contact.html"><i class="fas fa-angle-right"></i> Contato</a>
+				<a href="login.html"><i class="fas fa-angle-right"></i> Login</a>
+				<a href="register.html"><i class="fas fa-angle-right"></i> Registro</a>
+				<a href="cart.html"><i class="fas fa-angle-right"></i> Carrinho</a>
+			</div>
+		</div>
+	</div>
+</section>
 
 
 
