--- a/index.html
+++ b/index.html
@@ -52,19 +52,43 @@
 <section class="footer">
 	<div class="box-container">
 		<div class="box">
-			<div class="box">
-				<h3>Links Rápidos</h3>
-				<a href="home.html"><i class="fas fa-angle-right"></i> Home</a>
-				<a href="products.html"><i class="fas fa-angle-right"></i> Produtos</a>
-				<a href="about.html"><i class="fas fa-angle-right"></i> Sobre Nós</a>
-				<a href="blogs.html"><i class="fas fa-angle-right"></i> Blogs</a>
-				<a href="contact.html"><i class="fas fa-angle-right"></i> Contato</a>
-				<a href="login.html"><i class="fas fa-angle-right"></i> Login</a>
-				<a href="register.html"><i class="fas fa-angle-right"></i> Registro</a>
-				<a href="cart.html"><i class="fas fa-angle-right"></i> Carrinho</a>
-			</div>
+			<h3>Links Rápidos</h3>
+			<a href="home.html"><i class="fas fa-angle-right"></i> Home</a>
+			<a href="products.html"><i class="fas fa-angle-right"></i> Produtos</a>
+			<a href="about.html"><i class="fas fa-angle-right"></i> Sobre Nós</a>
+			<a href="blogs.html"><i class="fas fa-angle-right"></i> Blogs</a>
+			<a href="contact.html"><i class="fas fa-angle-right"></i> Contato</a>
+			<a href="login.html"><i class="fas fa-angle-right"></i> Login</a>
+			<a href="register.html"><i class="fas fa-angle-right"></i> Registro</a>
+			<a href="cart.html"><i class="fas fa-angle-right"></i> Carrinho</a>
+		</div>
+		<div class="box">
+			<h3>Links Extras</h3>
+			<a href="#"><i class="fas fa-angle-right"></i> Minha conta</a>
+			<a href="#"><i class="fas fa-angle-right"></i> Meu pedido</a>
+			<a href="#"><i class="fas fa-angle-right"></i> Minha Lista de Desejos</a>
+			<a href="#"><i class="fas fa-angle-right"></i> Termos de uso</a>
+			<a href="#"><i class="fas fa-angle-right"></i> Política de Privacidade</a>
+		</div>
+		<div class="box">
+			<h3>Siga-nos</h3>
+			<a href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
+			<a href="#"><i class="fab fa-twitter"></i> Twitter</a>
+			<a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+			<a href="#"><i class="fab fa-pinterest"></i> Pinterest</a>
+			<a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+			<a href="#"><i class="fab fa-github"></i> Github</a>
+		</div>
+		<div class="box">
+			<h3>Boletim de Notícias</h3>
+			<p>Inscreva-se para atualizações mais recentes</p>
+			<form action="">
+				<input type="email" placeholder="Digite Seu E-mail">
+				<input type="submit" value="Se inscrever" class="btn">
+			</form>
 		</div>
 	</div>
+	<div class="credits">Criado Por <span>Daniel Oliveira</span> | Todos os Direitos Reservados </div>
 </section>
 
 
