--- a/index.html
+++ b/index.html
@@ -47,6 +47,31 @@
 </header>
 
 
+<!-- ======= Home Section/Seção inicial ======= -->
+<section class="home">
+	<div class="slide" style="background: url(img/home-bg-1.png);">
+		<div class="content">
+			<span>Proteja seus olhos</span>
+			<h3>Até 50% de desconto</h3>
+			<a href="#" class="btn">Compre agora</a>
+		</div>
+	</div>
+	<div class="slide" style="background: url(img/home-bg-2.png);">
+		<div class="content">
+			<span>Proteja seus olhos</span>
+			<h3>Até 50% de desconto</h3>
+			<a href="#" class="btn">Compre agora</a>
+		</div>
+	</div>
+	<div class="slide" style="background: url(img/home-bg-3.png);">
+		<div class="content">
+			<span>Proteja seus olhos</span>
+			<h3>Até 50% de desconto</h3>
+			<a href="#" class="btn">Compre agora</a>
+		</div>
+	</div>
+</section>
+
 
 <!-- ======= Footer Section/Seção de rodapé ======= -->
 <section class="footer">
@@ -90,8 +115,6 @@
 	</div>
 	<div class="credits">Criado Por <span>Daniel Oliveira</span> | Todos os Direitos Reservados </div>
 </section>
-
-
 
 
 	
