--- a/index.html
+++ b/index.html
@@ -49,27 +49,30 @@
 
 <!-- ======= Home Section/Seção inicial ======= -->
 <section class="home">
-	<div class="slide" style="background: url(img/home-bg-1.png);">
+	<div class="slide active" style="background: url(img/home-bg-1.png) no-repeat;">
 		<div class="content">
 			<span>Proteja seus olhos</span>
 			<h3>Até 50% de desconto</h3>
 			<a href="#" class="btn">Compre agora</a>
 		</div>
 	</div>
-	<div class="slide" style="background: url(img/home-bg-2.png);">
+	<div class="slide" style="background: url(img/home-bg-2.png) no-repeat;">
 		<div class="content">
 			<span>Proteja seus olhos</span>
 			<h3>Até 50% de desconto</h3>
 			<a href="#" class="btn">Compre agora</a>
 		</div>
 	</div>
-	<div class="slide" style="background: url(img/home-bg-3.png);">
+	<div class="slide" style="background: url(img/home-bg-3.png) no-repeat;">
 		<div class="content">
 			<span>Proteja seus olhos</span>
 			<h3>Até 50% de desconto</h3>
 			<a href="#" class="btn">Compre agora</a>
 		</div>
 	</div>
+
+	<div id="next-slide" class="fas fa-angle-right"></div>
+	<div id="prev-slide" class="fas fa-angle-left"></div>
 </section>
 
 
@@ -115,7 +118,6 @@
 	</div>
 	<div class="credits">Criado Por <span>Daniel Oliveira</span> | Todos os Direitos Reservados </div>
 </section>
-
 
 	
 	<script src="js/script.js" defer></script>
