Home slide update

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 		</div>
 	</div>
 
-	<div id="next-slide" class="fas fa-angle-right"></div>
-	<div id="prev-slide" class="fas fa-angle-left"></div>
+	<div id="next-slide" onclick="next()" class="fas fa-angle-right"></div>
+	<div id="prev-slide" onclick="prev()" class="fas fa-angle-left"></div>
 </section>
 
 
