--- a/index.html
+++ b/index.html
@@ -76,6 +76,35 @@
 </section>
 
 
+<!-- ======= Banner Section/Seção Banner ======= -->
+<section class="banner">
+	<div class="box">
+		<img src="img/banner-1.jpg" alt="">
+		<div class="content">
+			<span>Oferta especial</span>
+			<h3>Até 20% de desconto</h3>
+			<a href="#" class="btn">Compre agora</a>
+		</div>
+	</div>
+	<div class="box">
+		<img src="img/banner-2.jpg" alt="">
+		<div class="content">
+			<span>Oferta especial</span>
+			<h3>Até 70% de desconto</h3>
+			<a href="#" class="btn">Compre agora</a>
+		</div>
+	</div>
+	<div class="box">
+		<img src="img/banner-3.jpg" alt="">
+		<div class="content">
+			<span>Oferta especial</span>
+			<h3>Até 30% de desconto</h3>
+			<a href="#" class="btn">Compre agora</a>
+		</div>
+	</div>
+</section>
+
+
 <!-- ======= Footer Section/Seção de rodapé ======= -->
 <section class="footer">
 	<div class="box-container">
