--- a/products.html
+++ b/products.html
@@ -47,7 +47,11 @@
 </header>
 
 
-
+<!-- ======= Heading Section/Seção de cabeçalho dois ======= -->
+<section class="heading">
+	<h1>Nossos produtos</h1>
+	<p> <a href="index.html"></a> >> Produtos </p>
+</section>
 
 
 
