--- a/blogs.html
+++ b/blogs.html
@@ -7,10 +7,101 @@
 	<title>Blogs</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/favicon.ico"/>
-	<!-- font awesoe cdn link -->
+	<!-- font awesome cdn link -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 </head>
 <body>
+
+<!-- ======= Header Section/Seção de cabeçalho ======= -->
+<header class="header">
+	<a href="index.html" class="logo"> LOGO </a>
+	<nav class="navbar">
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="products.html">Produtos</a></li>
+			<li><a href="#">Páginas +</a>
+				<ul>
+					<li><a href="about.html">Sobre Nós</a></li>
+					<li><a href="blogs.html">Blogs</a></li>
+				</ul>
+			</li>
+			<li><a href="contact.html">Contato</a></li>
+			<li><a href="#">Conta +</a>
+				<ul>
+					<li><a href="login.html">Login</a></li>
+					<li><a href="register.html">Registro</a></li>
+				</ul>
+			</li>
+		</ul>
+	</nav>
+	<div class="icons">
+		<div id="menu-btn" class="fas fa-bars"></div>
+		<div id="search-btn" class="fas fa-search"></div>
+		<a href="cart.html" class="fas fa-shopping-cart"></a>
+	</div>
+<!--Search form -->
+	<form action="" class="search-form">
+		<input type="search" name="" placeholder="Pesquise aqui..." id="search-box">
+		<label for="search-box" class="fas fa-search"></label>
+	</form>
+</header>
+
+
+<!-- ======= Heading Section/Seção de cabeçalho dois ======= -->
+<section class="heading">
+	<h1>Blogs</h1>
+	<p> <a href="index.html"></a> >> Blogs </p>
+</section>
+
+
+
+
+
+
+
+<!-- ======= Footer Section/Seção de rodapé ======= -->
+<section class="footer">
+	<div class="box-container">
+		<div class="box">
+			<h3>Links Rápidos</h3>
+			<a href="home.html"><i class="fas fa-angle-right"></i> Home</a>
+			<a href="products.html"><i class="fas fa-angle-right"></i> Produtos</a>
+			<a href="about.html"><i class="fas fa-angle-right"></i> Sobre Nós</a>
+			<a href="blogs.html"><i class="fas fa-angle-right"></i> Blogs</a>
+			<a href="contact.html"><i class="fas fa-angle-right"></i> Contato</a>
+			<a href="login.html"><i class="fas fa-angle-right"></i> Login</a>
+			<a href="register.html"><i class="fas fa-angle-right"></i> Registro</a>
+			<a href="cart.html"><i class="fas fa-angle-right"></i> Carrinho</a>
+		</div>
+		<div class="box">
+			<h3>Links Extras</h3>
+			<a href="#"><i class="fas fa-angle-right"></i> Minha conta</a>
+			<a href="#"><i class="fas fa-angle-right"></i> Meu pedido</a>
+			<a href="#"><i class="fas fa-angle-right"></i> Minha Lista de Desejos</a>
+			<a href="#"><i class="fas fa-angle-right"></i> Termos de uso</a>
+			<a href="#"><i class="fas fa-angle-right"></i> Política de Privacidade</a>
+		</div>
+		<div class="box">
+			<h3>Siga-nos</h3>
+			<a href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
+			<a href="#"><i class="fab fa-twitter"></i> Twitter</a>
+			<a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+			<a href="#"><i class="fab fa-pinterest"></i> Pinterest</a>
+			<a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+			<a href="#"><i class="fab fa-github"></i> Github</a>
+		</div>
+		<div class="box">
+			<h3>Boletim de Notícias</h3>
+			<p>Inscreva-se para atualizações mais recentes</p>
+			<form action="">
+				<input type="email" placeholder="Digite Seu E-mail">
+				<input type="submit" value="Se inscrever" class="btn">
+			</form>
+		</div>
+	</div>
+	<div class="credits">Criado Por <span>Daniel Oliveira</span> | Todos os Direitos Reservados </div>
+</section>
+	
 	
 	<script src="js/script.js"></script>
 </body>
@@ -20,5 +111,5 @@
     Autor: Daniel Oliveira
     Email: danieloliveira.webmaster@gmail.com
     Manaus/Amazonas
-    17/03/2022
+    11/08/2022
 -->
