--- a/blogs.html
+++ b/blogs.html
@@ -49,7 +49,7 @@
 
 <!-- ======= Heading Section/Seção de cabeçalho dois ======= -->
 <section class="heading">
-	<h1>Blogs</h1>
+	<h1>Nossos Blogs</h1>
 	<p> <a href="index.html"></a> >> Blogs </p>
 </section>
 
