--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 <!-- ======= Heading Section/Seção de cabeçalho dois ======= -->
 <section class="heading">
 	<h1>Sobre nós</h1>
-	<p> <a href="index.html"></a> >> Sobre </p>
+	<p> <a href="index.html">Home</a> >> Sobre </p>
 </section>
 
 
