--- a/blogs.html
+++ b/blogs.html
@@ -50,7 +50,7 @@
 <!-- ======= Heading Section/Seção de cabeçalho dois ======= -->
 <section class="heading">
 	<h1>Nossos Blogs</h1>
-	<p> <a href="index.html"></a> >> Blogs </p>
+	<p> <a href="index.html">Home</a> >> Blogs </p>
 </section>
 
 
