--- a/cart.html
+++ b/cart.html
@@ -50,7 +50,7 @@
 <!-- ======= Heading Section/Seção de cabeçalho dois ======= -->
 <section class="heading">
 	<h1>Carrinho de compras</h1>
-	<p> <a href="index.html"></a> >> Carrinho </p>
+	<p> <a href="index.html">Home</a> >> Carrinho </p>
 </section>
 
 
