--- a/products.html
+++ b/products.html
@@ -50,7 +50,7 @@
 <!-- ======= Heading Section/Seção de cabeçalho dois ======= -->
 <section class="heading">
 	<h1>Nossos produtos</h1>
-	<p> <a href="index.html"></a> >> Produtos </p>
+	<p> <a href="index.html">Home</a> >> Produtos </p>
 </section>
 
 
