--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 <!-- ======= Heading Section/Seção de cabeçalho dois ======= -->
 <section class="heading">
 	<h1>Nossos Contatos</h1>
-	<p> <a href="index.html"></a> >> Contatos </p>
+	<p> <a href="index.html">Home</a> >> Contatos </p>
 </section>
 
 
