--- a/products.html
+++ b/products.html
@@ -54,8 +54,33 @@
 </section>
 
 
-
-
+<!-- ======= Products Section/Seção de produtos ======= -->
+<section class="products">
+	<h1 class="title">Nossos Produtos em Destaque</h1>
+	<div class="box-container">
+		<div class="box">
+			<div class="image">
+				<div class="icons">
+					<a href="#" class="fas fa-shopping-cart"></a>
+					<a href="#" class="fas fa-share"></a>
+					<a href="#" class="fas fa-eye"></a>					
+				</div>
+				<img src="img/product-1.jpg" alt="">
+			</div>
+			<div class="content">
+				<h3></h3>
+				<div class="stars">
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star-half-alt"></i>
+				</div>
+				<div class="price">R$:20,00 <span>R$:25,00</span></div>
+			</div>
+		</div>
+	</div>
+</section>
 
 
 
