--- a/products.html
+++ b/products.html
@@ -68,7 +68,7 @@
 				<img src="img/product-1.jpg" alt="">
 			</div>
 			<div class="content">
-				<h3></h3>
+				<h3>Óculos Premium</h3>
 				<div class="stars">
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
@@ -90,7 +90,7 @@
 				<img src="img/product-2.jpg" alt="">
 			</div>
 			<div class="content">
-				<h3></h3>
+				<h3>Óculos Premium</h3>
 				<div class="stars">
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
@@ -112,7 +112,7 @@
 				<img src="img/product-3.jpg" alt="">
 			</div>
 			<div class="content">
-				<h3></h3>
+				<h3>Óculos Premium</h3>
 				<div class="stars">
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
@@ -134,7 +134,7 @@
 				<img src="img/product-4.jpg" alt="">
 			</div>
 			<div class="content">
-				<h3></h3>
+				<h3>Óculos Premium</h3>
 				<div class="stars">
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
@@ -156,7 +156,7 @@
 				<img src="img/product-5.jpg" alt="">
 			</div>
 			<div class="content">
-				<h3></h3>
+				<h3>Óculos Premium</h3>
 				<div class="stars">
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
@@ -178,7 +178,7 @@
 				<img src="img/product-6.jpg" alt="">
 			</div>
 			<div class="content">
-				<h3></h3>
+				<h3>Óculos Premium</h3>
 				<div class="stars">
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
@@ -200,7 +200,7 @@
 				<img src="img/product-7.jpg" alt="">
 			</div>
 			<div class="content">
-				<h3></h3>
+				<h3>Óculos Premium</h3>
 				<div class="stars">
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
@@ -222,7 +222,7 @@
 				<img src="img/product-8.jpg" alt="">
 			</div>
 			<div class="content">
-				<h3></h3>
+				<h3>Óculos Premium</h3>
 				<div class="stars">
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
@@ -244,7 +244,7 @@
 				<img src="img/product-9.jpg" alt="">
 			</div>
 			<div class="content">
-				<h3></h3>
+				<h3>Óculos Premium</h3>
 				<div class="stars">
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
