--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,18 @@
 </section>
 
 
-
-
+<!-- ======= Contact Section/Seção de contato ======= -->
+<section class="contact">
+	<h1 class="title">Entrar em contato</h1>
+	<div class="row">
+		<form action="">
+			<input type="text" class="box" placeholder="Seu nome">
+			<input type="email" class="box" placeholder="Seu email">
+			<input type="text" class="box" placeholder="Seu nome">
+			<input type="text" class="box" placeholder="Seu nome">
+		</form>
+	</div>
+</section>
 
 
 
