--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,13 @@
 		<form action="">
 			<input type="text" class="box" placeholder="Seu nome">
 			<input type="email" class="box" placeholder="Seu email">
-			<input type="text" class="box" placeholder="Seu nome">
-			<input type="text" class="box" placeholder="Seu nome">
+			<input type="number" class="box" placeholder="Seu número">
+			<textarea name="" id="" placeholder="Sua mensagem" cols="30" rows="10"></textarea>
+			<input type="submit" value="Enviar mensagem" class="btn">
 		</form>
+
+		<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31873.777875368487!2d-60.00014873800121!3d-3.0349674085442957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x926c1a35b6ea5203%3A0x55b9105841c57f2e!2sCidade%20Nova%2C%20Manaus%20-%20AM!5e0!3m2!1spt-BR!2sbr!4v1660403265129!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 	</div>
 </section>
 
