Login and register

--- a/register.html
+++ b/register.html
@@ -54,6 +54,37 @@
 </section>
 
 
+<!-- ======= Register Form/Formulário de registro ======= -->
+<section class="login-form">
+	<form action="">
+		<h3>Registro do usuário</h3>
+		<div class="inpuBox">
+			<span class="fas fa-user"></span>
+			<input type="name" name="" id="" placeholder="Digite o seu nome">
+		</div>
+		<div class="inpuBox">
+			<span class="fas fa-user"></span>
+			<input type="email" name="" id="" placeholder="Digite o seu email">
+		</div>
+		<div class="inpuBox">
+			<span class="fas fa-lock"></span>
+			<input type="password" name="" id="" placeholder="Digite a sua senha">
+		</div>
+		<div class="inpuBox">
+			<span class="fas fa-lock"></span>
+			<input type="password" name="" id="" placeholder="Confirme a sua senha">
+		</div>
+		<input type="submit" value="Entrar" class="btn">
+		<div class="flex">
+			<input type="checkbox" name="" id="remember-me">
+			<label for="remember-me">lembre-me</label>
+			<a href="#">Esqueceu a senha?</a>
+		</div>
+		<a href="register.html">Crie a sua conta aqui</a>
+	</form>
+</section>
+
+
 
 
 
