--- a/login.html
+++ b/login.html
@@ -54,9 +54,27 @@
 </section>
 
 
-
-
-
+<!-- ======= Login Form/Formulário de login ======= -->
+<section class="login-form">
+	<form action="">
+		<h3>Login de usuário</h3>
+		<div class="inpuBox">
+			<span class="fas fa-user"></span>
+			<input type="email" name="" id="" placeholder="Digite o seu email">
+		</div>
+		<div class="inpuBox">
+			<span class="fas fa-lock"></span>
+			<input type="password" name="" id="" placeholder="Digite a sua senha">
+		</div>
+		<input type="submit" value="Entrar" class="btn">
+		<div class="flex">
+			<input type="checkbox" name="" id="remember-me">
+			<label for="remember-me">lembre-me</label>
+			<a href="#">Esqueceu a senha?</a>
+		</div>
+		<a href="register.html">Crie a sua conta aqui</a>
+	</form>
+</section>
 
 
 <!-- ======= Footer Section/Seção de rodapé ======= -->
