--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
 	<form action="">
 		<h3>Login de usuário</h3>
 		<div class="inpuBox">
-			<span class="fas fa-user"></span>
+			<span class="fas fa-envelope"></span>
 			<input type="email" name="" id="" placeholder="Digite o seu email">
 		</div>
 		<div class="inpuBox">
@@ -72,7 +72,7 @@
 			<label for="remember-me">lembre-me</label>
 			<a href="#">Esqueceu a senha?</a>
 		</div>
-		<a href="register.html">Crie a sua conta aqui</a>
+		<a href="register.html" class="btn">Crie a sua conta aqui</a>
 	</form>
 </section>
 
