--- a/register.html
+++ b/register.html
@@ -55,7 +55,7 @@
 
 
 <!-- ======= Register Form/Formulário de registro ======= -->
-<section class="login-form">
+<section class="register-form">
 	<form action="">
 		<h3>Registro do usuário</h3>
 		<div class="inpuBox">
@@ -63,7 +63,7 @@
 			<input type="name" name="" id="" placeholder="Digite o seu nome">
 		</div>
 		<div class="inpuBox">
-			<span class="fas fa-user"></span>
+			<span class="fas fa-envelope"></span>
 			<input type="email" name="" id="" placeholder="Digite o seu email">
 		</div>
 		<div class="inpuBox">
@@ -74,13 +74,9 @@
 			<span class="fas fa-lock"></span>
 			<input type="password" name="" id="" placeholder="Confirme a sua senha">
 		</div>
-		<input type="submit" value="Entrar" class="btn">
-		<div class="flex">
-			<input type="checkbox" name="" id="remember-me">
-			<label for="remember-me">lembre-me</label>
-			<a href="#">Esqueceu a senha?</a>
-		</div>
-		<a href="register.html">Crie a sua conta aqui</a>
+		<input type="submit" value="Inscrever-se" class="btn">
+		
+		<a href="login.html" class="btn">já tem uma conta</a>
 	</form>
 </section>
 
