--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Login</title>
+	<title>Registro</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/favicon.ico"/>
 	<!-- font awesome cdn link -->
@@ -57,7 +57,7 @@
 <!-- ======= Register Form/Formulário de registro ======= -->
 <section class="register-form">
 	<form action="">
-		<h3>Registro do usuário</h3>
+		<h3>Registro de usuário</h3>
 		<div class="inpuBox">
 			<span class="fas fa-user"></span>
 			<input type="name" name="" id="" placeholder="Digite o seu nome">
@@ -79,11 +79,6 @@
 		<a href="login.html" class="btn">já tem uma conta</a>
 	</form>
 </section>
-
-
-
-
-
 
 
 <!-- ======= Footer Section/Seção de rodapé ======= -->
