Update about section

--- a/about.html
+++ b/about.html
@@ -54,8 +54,49 @@
 </section>
 
 
+<!-- ======= About Section/Seção Sobre nós ======= -->
+<section class="about">
+	<h1 class="title">Porque escolher-nos?</h1>
+	<div class="row">
+		<div class="image">
+			<img src="img/about-img.jpg" alt="">
+		</div>
 
+		<div class="content">
+			<h3>Os melhores vendedores de óculos</h3>
+			<p>Quem manda na minha terra sou euzis!Vehicula non. Ut sed ex eros. Vivamus sit 
+			amet nibh non tellus tristique interdum.Delegadis gente finis, bibendum egestas 
+			augue arcu ut est.Mé faiz elementum girarzis, nisi eros vermeio.</p>
+			<p>Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.Casamentiss faiz 
+			malandris se pirulitá.Mé faiz elementum girarzis, nisi eros vermeio.Paisis, filhis
+			espiritis santis.</p>
+			<a href="#" class="btn">Mais informação</a>
+		</div>
+	</div>
 
+	<div class="icons-container">
+		<div class="icons">
+			<img src="img/icon-1.png" alt="">
+			<h3>Todo tamanho</h3>
+		</div>
+		<div class="icons">
+			<img src="img/icon-2.png" alt="">
+			<h3>Entrega grátis</h3>
+		</div>
+		<div class="icons">
+			<img src="img/icon-3.png" alt="">
+			<h3>Todo tamanho</h3>
+		</div>
+		<div class="icons">
+			<img src="img/icon-4.png" alt="">
+			<h3>Todo tamanho</h3>
+		</div>
+		<div class="icons">
+			<img src="img/icon-5.png" alt="">
+			<h3>Todo tamanho</h3>
+		</div>
+	</div>
+</section>
 
 
 
