--- a/about.html
+++ b/about.html
@@ -85,15 +85,15 @@
 		</div>
 		<div class="icons">
 			<img src="img/icon-3.png" alt="">
-			<h3>Todo tamanho</h3>
+			<h3>Devoluções fáceis</h3>
 		</div>
 		<div class="icons">
 			<img src="img/icon-4.png" alt="">
-			<h3>Todo tamanho</h3>
+			<h3>Pagamentos fáceis</h3>
 		</div>
 		<div class="icons">
 			<img src="img/icon-5.png" alt="">
-			<h3>Todo tamanho</h3>
+			<h3>Suporte 24hs</h3>
 		</div>
 	</div>
 </section>
