Update section blogs

--- a/blogs.html
+++ b/blogs.html
@@ -54,8 +54,93 @@
 </section>
 
 
-
-
+<!-- ======= Blogs Section/Seção de blogs ======= -->
+<section class="blogs">
+	<div class="box">
+		<div class="image">
+			<img src="img/blog-1.jpg" alt="">
+		</div>
+		<div class="content">
+			<h3>O título do blog vai aqui...</h3>
+			<p>Atirei o pau no gatis, per gatis num morreus. Mé faiz elementum girarzis.</p>
+			<a href="#" class="btn">Mais informação</a>
+		</div>
+		<div class="icons">
+			<a href="#"><i class="fas fa-clock"></i> 14 de agosto de 2022</a>
+			<a href="#"><i class="fas fa-user"></i> By admin</a>
+		</div>
+	</div>
+	<div class="box">
+		<div class="image">
+			<img src="img/blog-2.jpg" alt="">
+		</div>
+		<div class="content">
+			<h3>O título do blog vai aqui...</h3>
+			<p>Atirei o pau no gatis, per gatis num morreus. Mé faiz elementum girarzis.</p>
+			<a href="#" class="btn">Mais informação</a>
+		</div>
+		<div class="icons">
+			<a href="#"><i class="fas fa-clock"></i> 14 de agosto de 2022</a>
+			<a href="#"><i class="fas fa-user"></i> By admin</a>
+		</div>
+	</div>
+	<div class="box">
+		<div class="image">
+			<img src="img/blog-3.jpg" alt="">
+		</div>
+		<div class="content">
+			<h3>O título do blog vai aqui...</h3>
+			<p>Atirei o pau no gatis, per gatis num morreus. Mé faiz elementum girarzis.</p>
+			<a href="#" class="btn">Mais informação</a>
+		</div>
+		<div class="icons">
+			<a href="#"><i class="fas fa-clock"></i> 14 de agosto de 2022</a>
+			<a href="#"><i class="fas fa-user"></i> By admin</a>
+		</div>
+	</div>
+	<div class="box">
+		<div class="image">
+			<img src="img/blog-4.jpg" alt="">
+		</div>
+		<div class="content">
+			<h3>O título do blog vai aqui...</h3>
+			<p>Atirei o pau no gatis, per gatis num morreus. Mé faiz elementum girarzis.</p>
+			<a href="#" class="btn">Mais informação</a>
+		</div>
+		<div class="icons">
+			<a href="#"><i class="fas fa-clock"></i> 14 de agosto de 2022</a>
+			<a href="#"><i class="fas fa-user"></i> By admin</a>
+		</div>
+	</div>
+	<div class="box">
+		<div class="image">
+			<img src="img/blog-5.jpg" alt="">
+		</div>
+		<div class="content">
+			<h3>O título do blog vai aqui...</h3>
+			<p>Atirei o pau no gatis, per gatis num morreus. Mé faiz elementum girarzis.</p>
+			<a href="#" class="btn">Mais informação</a>
+		</div>
+		<div class="icons">
+			<a href="#"><i class="fas fa-clock"></i> 14 de agosto de 2022</a>
+			<a href="#"><i class="fas fa-user"></i> By admin</a>
+		</div>
+	</div>
+	<div class="box">
+		<div class="image">
+			<img src="img/blog-6.jpg" alt="">
+		</div>
+		<div class="content">
+			<h3>O título do blog vai aqui...</h3>
+			<p>Atirei o pau no gatis, per gatis num morreus. Mé faiz elementum girarzis.</p>
+			<a href="#" class="btn">Mais informação</a>
+		</div>
+		<div class="icons">
+			<a href="#"><i class="fas fa-clock"></i> 14 de agosto de 2022</a>
+			<a href="#"><i class="fas fa-user"></i> By admin</a>
+		</div>
+	</div>
+</section>
 
 
 
