Shopping cart section

--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Carrinho</title>
+	<title>Carrinho de compras</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/favicon.ico"/>
 	<!-- font awesome cdn link -->
@@ -54,8 +54,19 @@
 </section>
 
 
-
-
+<!-- ======= Shopping Cart Section/Seção de Carrinho de compras ======= -->
+<section class="shopping-cart">
+	<h1 class="title">Seus produtos</h1>
+	<div class="box-container">
+		<div class="box">
+			<i class="fas fa-times"></i>
+			<img src="img/cart-item-1.png" alt="">
+			<div class="content">
+				<h3>Óculos premium</h3>
+			</div>
+		</div>
+	</div>
+</section>
 
 
 
