--- a/cart.html
+++ b/cart.html
@@ -63,6 +63,63 @@
 			<img src="img/cart-item-1.png" alt="">
 			<div class="content">
 				<h3>Óculos premium</h3>
+				<form action="">
+					<span>Quantidade :</span>
+					<input type="number" name="" value="1" id="">
+				</form>
+				<div class="price"> R$20,00 <span>R$25,00</span></div>
+			</div>
+		</div>
+
+		<div class="box">
+			<i class="fas fa-times"></i>
+			<img src="img/cart-item-2.png" alt="">
+			<div class="content">
+				<h3>Óculos premium</h3>
+				<form action="">
+					<span>Quantidade :</span>
+					<input type="number" name="" value="1" id="">
+				</form>
+				<div class="price"> R$20,00 <span>R$25,00</span></div>
+			</div>
+		</div>
+
+		<div class="box">
+			<i class="fas fa-times"></i>
+			<img src="img/cart-item-3.png" alt="">
+			<div class="content">
+				<h3>Óculos premium</h3>
+				<form action="">
+					<span>Quantidade :</span>
+					<input type="number" name="" value="1" id="">
+				</form>
+				<div class="price"> R$20,00 <span>R$25,00</span></div>
+			</div>
+		</div>
+
+		<div class="box">
+			<i class="fas fa-times"></i>
+			<img src="img/cart-item-4.png" alt="">
+			<div class="content">
+				<h3>Óculos premium</h3>
+				<form action="">
+					<span>Quantidade :</span>
+					<input type="number" name="" value="1" id="">
+				</form>
+				<div class="price"> R$20,00 <span>R$25,00</span></div>
+			</div>
+		</div>
+
+		<div class="box">
+			<i class="fas fa-times"></i>
+			<img src="img/cart-item-5.png" alt="">
+			<div class="content">
+				<h3>Óculos premium</h3>
+				<form action="">
+					<span>Quantidade :</span>
+					<input type="number" name="" value="1" id="">
+				</form>
+				<div class="price"> R$20,00 <span>R$25,00</span></div>
 			</div>
 		</div>
 	</div>
