--- a/cart.html
+++ b/cart.html
@@ -123,8 +123,13 @@
 			</div>
 		</div>
 	</div>
+	<h1 class="title">Finalizar carrinho</h1>
+	<div class="cart-total">
+		<h3>subtotal : <span>R$100,00</span></h3>
+		<h3>total : <span>R$100,00</span></h3>
+		<a href="#" class="btn">Fazer o check-out</a>
+	</div>
 </section>
-
 
 
 <!-- ======= Footer Section/Seção de rodapé ======= -->
